crates/haneul/tests/snapshots/ptb_files_tests__invalid_sender.ptb.snap
---
source: crates/haneul/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === ERRORS AFTER PARSING INPUT COMMANDS === 
  × Error when processing PTB
   ╭────
 1 │ --sender 123 
   ·          ─┬─
   ·           ╰── Expected an address
   ╰────
  help: Addresses or object IDs require the character '@' in front
